--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,105 @@
-.App {
+.App{
+  max-width: 50%;
+  margin: 10px auto;
+  max-height: 50%;
+}
+.grid{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-gap: 10px;
+  cursor: pointer;
+  margin-top: 40px;
+}
+.cong{
+  margin-top: 40px;
+  background: linear-gradient(135deg,  #33c54b 0%,#00c1fc 50%,#fc3b00 100%);
+  width: 300px;
+  height: 300px;
+  border-radius: 6px;
+  justify-content: center;
+  align-items: center;
+}
+/* .board-container {
+  position: relative;
+  margin-top: 20px;
+}
+
+.board,
+.win {
+  border-radius: 5px;
+  box-shadow: 0 25px 50px rgb(33 33 33 / 25%);
+  background: linear-gradient(135deg,  #5a33c5 0%,#00c1fc 50%,#fc3b00 100%);
+  transition: transform .6s cubic-bezier(0.4, 0.0, 0.2, 1);
+  
+}
+
+.board {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  grid-gap: 20px;
+}
+
+.board-container.flipped .board {
+  transform: rotateY(180deg) rotateZ(50deg);
+}
+
+.board-container.flipped .win {
+  transform: rotateY(0) rotateZ(0);
+} */
+/* .win {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   text-align: center;
-}
+  background: #fdf8e6cb;
+  transform: rotateY(180deg) rotateZ(50deg);
+} */
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* .win h3,p {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 21pt;
+  color: #495f68;
+} */
+p{
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  margin-top: 50px;
 }
-
-.App-link {
-  color: #61dafb;
+h3{
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+@media (max-width: 768px) {
+  .App {
+    max-width: 90%;
+    margin: 10px auto;
+    max-height: 90%;
   }
-  to {
-    transform: rotate(360deg);
+
+  .grid {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-gap: 5px;
+    margin-top: 20px;
+  }
+
+  .cong {
+    width: 200px;
+    height: 200px;
+  }
+
+  img {
+    width: 100%;
+    height: 60px;
+  }
+
+  p, h3 {
+    margin-top: 20px;
   }
 }
